# RemoteScreen

client/: CMakeLists.txt  build.bat  gen_project.bat  main.cpp  readme
client/ui/: MainWindow.ui
client/windows/: mainwindow.cpp  mainwindow.h
server/: CMakeLists.txt  build.bat  d  main.cpp  readme
