project(RemoteScreenClient C CXX)
cmake_minimum_required(VERSION 2.6.0)
set (CMAKE_IN_SOURCE_BUILD TRUE)
include_directories (windows)
set(SOURCES main.cpp windows/mainwindow.cpp)
set(UIS ui/MainWindow.ui)
set(MOC_HEADERS windows/mainwindow.h)
set (RCCS client.qrc)
add_definitions(-Wall -g)
find_package(Qt4 REQUIRED)
include(${QT_USE_FILE})
qt4_wrap_ui(UI_HEADERS ${UIS})
qt4_wrap_cpp(MOC_SRCS ${MOC_HEADERS})
qt4_add_resources(RCC_SRCS ${RCCS})
include_directories( ${CMAKE_BINARY_DIR} )
add_executable(client ${SOURCES} ${UI_HEADERS} ${MOC_SRCS} ${RCC_SRCS} ${QM_FILES})
target_link_libraries(client ${QT_LIBRARIES})
